// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTemplate rendering 1`] = `
<html>
  <head>
    <meta
      charSet="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1, shrink-to-fit=no"
      name="viewport"
    />
    <meta
      content="Regular expression visualization tool using railroad diagrams"
      name="description"
    />
    <link
      href="/humans.txt"
      rel="author"
    />
    <title>
      Regexper
    </title>
  </head>
  <body
    data-build-id="test-id"
  >
    <div
      id="root"
    >
      <p>
        Content
      </p>
    </div>
  </body>
</html>
`;

exports[`PageTemplate rendering with title 1`] = `
<html>
  <head>
    <meta
      charSet="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1, shrink-to-fit=no"
      name="viewport"
    />
    <meta
      content="Regular expression visualization tool using railroad diagrams"
      name="description"
    />
    <link
      href="/humans.txt"
      rel="author"
    />
    <title>
      Regexper
       - Example
    </title>
  </head>
  <body
    data-build-id="test-id"
  >
    <div
      id="root"
    >
      <p>
        Content
      </p>
    </div>
  </body>
</html>
`;
